logo link to home

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<!-- Navbar -->
 	<nav class="navbar navbar-expand-lg shadow">
 		<div class="container p-2">
-			<a class="navbar-brand" href="/bsale/client">Bsale Store</a>
+			<a class="navbar-brand" href="/">Bsale Store</a>
 			<select id="categories" class="form-select form-select-sm w-25" aria-label=".form-select-lg example">
 			  <option selected value="0" >-- categorias --</option>
 			</select>
